--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,9 @@ jobs:
       - name: build
         run: npm run build
 
-      - name: deploy pages
-        uses: JamesIves/github-pages-deploy-action@v4.4.1
+      - name: Deploy
+        uses: crazy-max/ghaction-github-pages@v2.0.1
         with:
-          branch: dist
-          folder: dist
+          build_dir: dist
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
