--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,11 +12,20 @@ jobs:
       - name: Clone repository
         uses: actions/checkout@v3
 
-      - name: install
+      - name: Install deps
         run: npm i --legacy-peer-deps
 
-      - name: build
+      - name: Install typescript
+        run: npm install -g typescript
+
+      - name: Download images
+        run: cd src/ && tsc build.ts && node build.js
+
+      - name: Build
         run: npm run build
+
+      - name: Copy images
+        run: cp src/assets/* dist/assets
 
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v3.1.0
